# Terminara

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  main.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  terminara.spec
.gemini/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/release-please/: config.json
.github/workflows/: build-and-release.yml  linting.yml  pages.yml  release-please.yml  sonarcloud-scan.yml  unittest.yml
core/: game_engine.py
docs/: index.html
screens/: game_view_screen.py  main_menu_screen.py  new_game_screen.py  options_menu_screen.py  styles.tcss
terminara/: __init__.py  main.py
terminara/core/: ai_narrator.py  config_manager.py  game_engine.py  state_manager.py  world_handler.py
terminara/data/schema/: save_schema.json  world_schema.json
terminara/data/worlds/: aethelgard.json  aethelgard_zh.json  world_schema.json
terminara/objects/: game_state.py  scenario.py  world_settings.py
terminara/screens/: details_view_screen.py  game_view_screen.py  load_game_screen.py  main_menu_screen.py  new_game_screen.py  options_menu_screen.py  save_game_screen.py  styles.tcss
terminara/screens/widgets/: file_list_item.py
tests/test_core/: test_config_manager.py  test_world_handler.py
