[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminara"
dynamic = ["version"]
description = "Terminal-based adventure game"
authors = [
    { name = "Lu Yiou Rwong", email = "35396353+luyiourwong@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual ~= 6.1.0",
    "openai ~= 1.107.1",
    "keyring ~= 25.6.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.scripts]
terminara = "terminara.main:main"

[project.urls]
Repository = "https://github.com/luyiourwong/terminara"
Issues = "https://github.com/luyiourwong/terminara/issues"

# Read version from terminara/__init__.py (Auto versioning via Release Please)
[tool.setuptools.dynamic]
version = {attr = "terminara.__version__"}

# Get packages
[tool.setuptools.packages.find]
# exclude = ["tests*", "docs*"]