[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminara"
dynamic = ["version"]
description = "Terminal-based adventure game"
authors = [
    { name = "Lu Yiou Rwong", email = "35396353+luyiourwong@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = [
    "textual >= 6.0.0, <7",
    "openai >= 1.107.0, <2"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "flake8 ~= 7.3.0",
    "textual-dev ~= 1.7.0"
]

[project.scripts]
terminara = "terminara.main:main"

[project.urls]
Repository = "https://github.com/luyiourwong/terminara"
Issues = "https://github.com/luyiourwong/terminara/issues"

# Read version from terminara/__init__.py (Auto versioning via Release Please)
[tool.setuptools.dynamic]
version = { attr = "terminara.__version__" }

# Get packages
[tool.setuptools.packages.find]
# exclude = ["tests*", "docs*"]